fdo#85182 : default focus on folder rather than filename (4.4)

Change-Id: I84a2b6dd3f7045f1e95e6d45226797c33231552b
Reviewed-on: https://gerrit.libreoffice.org/13685
Reviewed-by: Yousuf Philips <philipz85@hotmail.com>
Tested-by: Yousuf Philips <philipz85@hotmail.com>
(cherry picked from commit 87e0ae677a7d39e4890d470a3537113c9ab2fa95)