fpicker/source/office/iodlg.cxx
@@ -455,6 +455,7 @@ void SvtFileDialog::Init_Impl
     get(_pImp->_pCbOptions, "options");
     get(_pImp->_pFtFileName, "file_name_label");
     get(_pImp->_pEdFileName, "file_name");
+    _pImp->_pEdFileName->GetFocus();
     get(_pImp->_pFtFileType, "file_type_label");
     get(_pImp->_pLbFilter, "file_type");
     get(_pImp->_pEdCurrentPath, "current_path");
